fixing spacing for contributions images

--- a/styles.css
+++ b/styles.css
@@ -79,8 +79,8 @@ a:hover {
    #profile-img {
       width: 50%;
       border-radius: 50%;
-      margin-bottom: 1em;
       margin-top: 1em;
+      margin-bottom: 1em;
    }
 }
 
@@ -92,6 +92,8 @@ a:hover {
    #profile-img {
       width: 66.7%;
       border-radius: 50%;
+      margin-top: 1em;
+      margin-bottom: 1em;
    }
 }
 
@@ -103,5 +105,7 @@ a:hover {
    #profile-img {
       width: 66.7%;
       border-radius: 50%;
+      margin-top: 1em;
+      margin-bottom: 1em;
    }
 }
